--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@csstools/normalize.css": "^12.1.1",
     "@types/react-vertical-timeline-component": "^3.3.6",
+    "gh-pages": "^6.3.0",
     "sanitize.css": "^13.0.0"
   }
 }
